# Drum-Machine

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  build_and_run.sh  main.cpp
data/drum-kits/: kit_1.json  kit_2.json
data/presets/: Demo.txt  demo.json
src/: drum_controller.cpp  drum_controller.hpp  drum_pack.cpp  drum_pack.hpp  drum_packs_manager.cpp  drum_packs_manager.hpp  drum_track_model.cpp  drum_track_model.hpp  drum_types.hpp  drum_view.cpp  drum_view.hpp  file_manager.cpp  file_manager.hpp  main.cpp  presets.cpp  presets.hpp  themes.hpp  utils.cpp  utils.hpp
src/ui/: drum_view.cpp  drum_view.hpp  drum_view_controls.cpp  drum_view_controls.hpp  drum_view_menu.cpp  drum_view_menu.hpp  drum_view_tracks.cpp  drum_view_tracks.hpp  drum_view_utils.hpp
